매일 자정에 워크플로우를 실행하도록 시간 재조정

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update README
 
 on:
   schedule:
-    - cron: "0 * * * *" # 매 시간마다 실행
+    - cron: "0 0 * * *" # 매 시간마다 실행
   push:
     branches:
       - main
